--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 django-filter = "*"
+djangorestframework-jwt = "*"
 
 [dev-packages]
 
