--- a/polaire/angular/angular.json
+++ b/polaire/angular/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "35ff95a0-8fcb-4874-9f23-3fabd4118706"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
