--- a/Dockerfile_angular
+++ b/Dockerfile_angular
@@ -1,7 +1,8 @@
 # syntax=docker/dockerfile:1
 FROM node:16-alpine
 
-WORKDIR /code
-COPY polaire/angular/package*.json ./
+WORKDIR /code/angular
+COPY polaire/angular/package*.json .
 RUN npm install
+WORKDIR /code
 RUN npm install -g @angular/cli
