--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 django-cors-headers = "*"
 django-filter = "*"
 djangorestframework-jwt = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
