--- a/angular/Dockerfile
+++ b/angular/Dockerfile
@@ -3,6 +3,8 @@ FROM node:16-alpine
 
 WORKDIR /code/
 COPY package*.json .
-RUN npm install
+#RUN npm install --production=false
 
-RUN npm install -g @angular/cli
+EXPOSE 4200
+
+RUN npm install -g @angular/cli@11.2.10
