--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,4 +31,10 @@ server {
         proxy_redirect off;
     }
 
+    location /media/ {
+        proxy_pass http://django;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
 }
